--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
         <a class="logo" href="index.html">
           <span class="logo__part">Web</span>Studio
         </a>
-        
         <button class="menu-open-btn" data-menu-open type="button">
-          <svg width="40" height="40">
-            <use class="js-open-menu" href="./img/symbol-defs.svg#icon-mobile-menu"></use>
+          <svg class="menu-open-btn__icon" width="40" height="40">
+            <use href="./img/symbol-defs.svg#icon-mobile-menu"></use>
           </svg>
         </button>
-        <div class="mob-menu is-hidden" data-menu>
+        <div class="mob-menu tablet-menu is-hidden" data-menu>
           <div class="container-mob-menu">
             <div class="mob-menu-navigation">
               <nav class="navigation">
@@ -204,7 +203,7 @@
                 <source srcset="./img/Mobile/photo-mobile1-450.jpg 1x,
                   ./img/Mobile/photo-mobile1-450-2x.jpg 2x"
                   media="(max-width: 767px)">
-                <img class="team__img"
+                <img class=""
                   src="./img/Mobile/photo-mobile1-450.jpg"
                   alt="Фото сотрудника"
                   width="450"
