--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
             <li class="team__item">
               <picture>
                 <source srcset="./img/Mobile/photo-mobile1-450.jpg 1x,
-                  ./img/Mobile/photo-mobile1-450-2x.jpg 2x"
-                  media="(max-width: 767px)">
-                <img class=""
+                  ./img/Mobile/photo-mobile1-450-2x.jpg 2x">
+                  <!-- media="(max-width: 767px)"> -->
+                <img class="team__img"
                   src="./img/Mobile/photo-mobile1-450.jpg"
                   alt="Фото сотрудника"
                   width="450"
@@ -247,8 +247,8 @@
             <li class="team__item">
               <picture>
                 <source srcset="./img/Mobile/photo-mobile2-450.jpg 1x,
-                  ./img/Mobile/photo-mobile2-450-2x.jpg 2x"
-                  media="(max-width: 767px)">
+                  ./img/Mobile/photo-mobile2-450-2x.jpg 2x">
+                  <!-- media="(max-width: 767px)"> -->
                 <img class="team__img"
                   src="./img/Mobile/photo-mobile2-450.jpg"
                   alt="Фото сотрудника"
@@ -293,8 +293,8 @@
             <li class="team__item">
               <picture>
                 <source srcset="./img/Mobile/photo-mobile3-450.jpg 1x,
-                  ./img/Mobile/photo-mobile3-450-2x.jpg 2x"
-                  media="(max-width: 767px)">
+                  ./img/Mobile/photo-mobile3-450-2x.jpg 2x">
+                  <!-- media="(max-width: 767px)"> -->
                 <img class="team__img"
                   src="./img/Mobile/photo-mobile3-450.jpg"
                   alt="Фото сотрудника"
@@ -339,8 +339,8 @@
             <li class="team__item">
               <picture>
                 <source srcset="./img/Mobile/photo-mobile4-450.jpg 1x,
-                  ./img/Mobile/photo-mobile4-450-2x.jpg 2x"
-                  media="(max-width: 767px)">
+                  ./img/Mobile/photo-mobile4-450-2x.jpg 2x">
+                  <!-- media="(max-width: 767px)"> -->
                 <img class="team__img"
                   src="./img/Mobile/photo-mobile4-450.jpg"
                   alt="Фото сотрудника"
