--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
             <li class="activity__item">
               <img
                 class="activity__img"
-                src="./img/img.jpg"
+                srcset="./img/Desktop/activity-img1.jpg 1x
+                ./img/Desktop/activity-img1-2x.jpg 2x"
+                src="./img/Desktop/activity-img1.jpg"
                 alt="Десктопні додатки"
                 width="370"
               />
@@ -205,7 +207,9 @@
             <li class="activity__item">
               <img
                 class="activity__img"
-                src="./img/img1.jpg"
+                srcset="./img/Desktop/activity-img2.jpg 1x
+                ./img/Desktop/activity-img2-2x.jpg 2x"
+                src="./img/Desktop/activity-img2.jpg"
                 alt="Работа с графикой"
                 width="370"
               />
@@ -216,7 +220,9 @@
             <li class="activity__item">
               <img
                 class="activity__img"
-                src="./img/img2.jpg"
+                srcset="./img/Desktop/activity-img3.jpg 1x
+                ./img/Desktop/activity-img3-2x.jpg 2x"
+                src="./img/Desktop/activity-img3.jpg"
                 alt="Работа с графикой"
                 width="370"
               />
@@ -240,8 +246,8 @@
                   <source srcset="./img/Tablet/photo-tablet1.jpg 1x,
                   ./img/Tablet/photo-tablet1-2x.jpg 2x"
                   media="(min-width: 768px)">
-                  <source srcset="./img/Mobile/photo-mobile1-450.jpg 1x,
-                  ./img/Mobile/photo-mobile1-2x-450.jpg 2x"
+                  <source srcset="./img/Desktop/team-desktop-photo1.jpg 1x,
+                  ./img/Desktop/team-desktop-photo1-2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <img class="team__img"
                   src="./img/Mobile/photo-mobile1-450.jpg"
@@ -292,8 +298,8 @@
                   <source srcset="./img/Tablet/photo-tablet2.jpg 1x,
                   ./img/Tablet/photo-tablet2-2x.jpg 2x"
                   media="(min-width: 768px)">
-                  <source srcset="./img/Mobile/photo-mobile1-450.jpg 1x,
-                  ./img/Mobile/photo-mobile1-2x-450.jpg 2x"
+                  <source srcset="./img/Desktop/team-desktop-photo2.jpg 1x,
+                  ./img/Desktop/team-desktop-photo2-2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <img class="team__img"
                   src="./img/Mobile/photo-mobile2-450.jpg"
@@ -344,8 +350,8 @@
                   <source srcset="./img/Tablet/photo-tablet3.jpg 1x,
                   ./img/Tablet/photo-tablet3-2x.jpg 2x"
                   media="(min-width: 768px)">
-                  <source srcset="./img/Mobile/photo-mobile1-450.jpg 1x,
-                  ./img/Mobile/photo-mobile1-2x-450.jpg 2x"
+                  <source srcset="./img/Desktop/team-desktop-photo3.jpg 1x,
+                  ./img/Desktop/team-desktop-photo3-2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <img class="team__img"
                   src="./img/Mobile/photo-mobile3-450.jpg"
@@ -396,8 +402,8 @@
                   <source srcset="./img/Tablet/photo-tablet4.jpg 1x,
                   ./img/Tablet/photo-tablet4-2x.jpg 2x"
                   media="(min-width: 768px)">
-                  <source srcset="./img/Mobile/photo-mobile1-450.jpg 1x,
-                  ./img/Mobile/photo-mobile4-2x.jpg 2x"
+                  <source srcset="./img/Desktop/team-desktop-photo4.jpg 1x,
+                  ./img/Desktop/team-desktop-photo4-2x.jpg 2x"
                   media="(min-width: 1200px)">
                 <img class="team__img"
                   src="./img/Mobile/photo-mobile4-450.jpg"
