--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,10 @@
               <nav class="navigation">
                 <ul class="navigation__list">
                   <li class="navigation__item">
-                    <a class="navigation__link current" href="index.html">Студія</a>
+                    <a class="navigation__link" href="index.html">Студія</a>
                   </li>
                   <li class="navigation__item">
-                    <a class="navigation__link" href="portfolio.html">Портфоліо</a>
+                    <a class="navigation__link current" href="portfolio.html">Портфоліо</a>
                   </li>
                   <li class="navigation__item">
                     <a class="navigation__link" href="">Контакти</a>
@@ -93,10 +93,10 @@
             <nav class="navigation">
               <ul class="navigation__list">
                 <li class="navigation__item">
-                  <a class="navigation__link current" href="index.html">Студія</a>
+                  <a class="navigation__link" href="index.html">Студія</a>
                 </li>
                 <li class="navigation__item">
-                  <a class="navigation__link" href="portfolio.html">Портфоліо</a>
+                  <a class="navigation__link current" href="portfolio.html">Портфоліо</a>
                 </li>
                 <li class="navigation__item">
                   <a class="navigation__link" href="">Контакти</a>
