fix text, fix padding section

--- a/index.html
+++ b/index.html
@@ -619,7 +619,8 @@
             </label>
             <label class="modal-form__checkbox"> 
               <input class="modal-form__checkbox-input visually-hidden" type="checkbox" name="policy">
-                Погоджуюся з розсилкою та приймаю <a class="modal-from__policy-link" href="">Умови договору</a>
+                Погоджуюся з розсилкою та приймаю 
+              <a class="modal-from__policy-link" href="">Умови договору</a>
               <span class="modal-from__checkbox-icon"></span>  
             </label>
           </div>
